tests/ui/frontmatter/frontmatter-invalid-indentation.stderr
error: expected item, found `-`
  --> $DIR/frontmatter-invalid-indentation.rs:1:3
   |
LL |   ---
   |   ^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

